# dotfiles

./: .gitignore  context_analyzer.py  notes of research.txt  starship.toml  whkdrc
Path/: pwsh.lnk
favorites/: .config.lnk  Downloads.lnk  khammitt.lnk  wallpapers.lnk
komorebi/: komorebi.json
micro/backups/: C%%Users%khammitt%.config%yasb%styles.css  C%%Users%khammitt%AppData%Local%nvim%init.lua
mov-cli/: config.toml
nvim/lua/plugins/: colorscheme.lua
pwsh/: sly_browse.ps1  sly_history.txt  sly_pwsh.ps1  sly_pwsh.ps1.lnk  sly_pwsh_symlinks.ps1
scoop/: config.json
sly_util/: pyproject.toml
wezterm/: wezterm.lua
