[project]
name = "sly_util_slyyyle"
version = "0.0.1"
authors = [
  { name="Kyle Hammitt", email="khammitt1@gmail.com" },
]
description = "Just some personal utilities for a nice single import.  Idiot."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/slyyyle/sly_util"
Issues = "https://github.com/slyyyle/sly_util/issues"